--- a/css/mycss.css
+++ b/css/mycss.css
@@ -187,3 +187,23 @@ p {
 .top-banner p {
   color: var(--white-color);
 }
+
+/* our menu design */
+.our-menu .card {
+  border: none;
+}
+.our-menu .link-category-product {
+  position: relative;
+  display: block;
+  z-index: 1;
+}
+.our-menu .link-category-product::before {
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px dotted var(--secondary-color);
+}
