--- a/css/mycss.css
+++ b/css/mycss.css
@@ -255,6 +255,7 @@ p {
   padding-left: 2rem;
 }
 /* food type section design */
+
 .food-type {
   padding-top: 3.25rem;
 }
@@ -264,4 +265,16 @@ p {
   line-height: 32px;
   position: relative;
   margin-left: 30px;
+}
+.food-type ul li::before {
+  position: absolute;
+  left: -2.1875rem;
+  color: var(--primary-color);
+  font-size: 1.25rem;
+  font-family: "Font Awesome 5 Free";
+  content: "\f00c";
+  display: inline-block;
+  padding-right: 3px;
+  vertical-align: middle;
+  font-weight: 900;
 }
